--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_auth: ^5.6.2
   firebase_core: ^3.15.1
+  firebase_messaging: ^15.2.9
   flutter:
     sdk: flutter
 
